# open-theremin

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: python-app.yml
model/: cascade.xml
model_performance/: model_performance.py
open_theremin/: __init__.py  __main__.py  common.py  constants.py
open_theremin/hand_detection/: __init__.py  detector.py  webcam.py
open_theremin/hand_detection_classic/: __init__.py  detectorClassic.py  webcamClassic.py
open_theremin/interface/: main_window.py  placeholder_webcam.py  webcam.py
open_theremin/synth/: csound.py  csound_api.py  mouse.py  synth.py  synthesizer.py
